--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
             </intent-filter>
         </activity>
         <activity android:label="@string/app_name" android:name=".MainActivity"/>
+        <activity android:label="@string/app_name" android:name=".EditPlayerActivity"/>
     </application>
 
 </manifest>
