--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:name=".AddPlayerActivity"
             android:label="@string/app_name" />
         <activity
-            android:name=".TeamManagmentActivity"
+            android:name="pkgTab.TeamManagmentActivity"
             android:label="@string/title_activity_team_managment"/>
             <!--android:theme="@style/AppTheme.NoActionBar"></activity> -->
     </application>
