--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,16 @@
             android:name=".AddPlayerActivity"
             android:label="@string/app_name" />
         <activity
-            android:name="pkgTab.TeamManagmentActivity"
+            android:name=".TeamManagmentActivity"
+            android:label="@string/title_activity_team_managment" />
+        <!-- android:theme="@style/AppTheme.NoActionBar"></activity> -->
+        <activity
+            android:name=".AddGameSelectPlayersActivity"
+            android:label="@string/app_name" />
+        <activity
+            android:name=".AddGameEnterDataActivity"
+            android:label="@string/title_activity_add_game_enter_data" />
+            android:name="group2.schoolproject.a02soccer.TeamManagmentActivity"
             android:label="@string/title_activity_team_managment"/>
             <!--android:theme="@style/AppTheme.NoActionBar"></activity> -->
     </application>
