Improvements to entering data in AddGameEnterData

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
         <activity
             android:name=".AddGameEnterDataActivity"
             android:label="@string/title_activity_add_game_enter_data"
+            android:windowSoftInputMode="adjustNothing"
             android:screenOrientation="portrait"/>
     </application>
 
