--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" android:label= "Santner's großes Fußballabenteuer"
+        <activity android:name=".MainActivity" android:label= "Moskito's Soccer App"
             android:theme="@style/AppTheme.NoActionBar">
 
             <intent-filter>
