--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.App.Base">
         <activity android:name=".MainActivity" android:label= "Moskito's Soccer App"
             android:theme="@style/AppTheme.NoActionBar">
 
