--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
             android:name=".AddPlayerActivity"
             android:label="@string/title_activity_add_player"/>
         <activity
-            android:name=".TeamManagmentActivity"
+            android:name=".TeamDivisionActivity"
             android:label="@string/title_activity_team_management"/>
         <!-- android:theme="@style/AppTheme.NoActionBar"></activity> -->
         <activity
