--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:name=".EditPlayerOwnActivity"
             android:label="@string/title_activity_edit_player_own" />
         <activity
-            android:name=".EditPlayerAdminActivity"
+            android:name=".EditPlayerActivity"
             android:label="@string/title_activity_edit_player_admin" />
         <activity
             android:name=".AddPlayerActivity"
