--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,7 +59,6 @@
         </activity>
         <activity
             android:name=".ScoreBoardActivity"
-            android:label="@string/title_activity_score_board"
-            android:theme="@style/Theme.App.Base.NoActionBar"></activity>
+            android:label="@string/title_activity_score_board" />
     </application>
 </manifest>
