--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,8 @@
             android:label="@string/title_activity_player_stats"/>
         <activity
             android:name=".ShowGameActivity"
-            android:label="@string/title_activity_display_game"/>
+            android:label="@string/title_activity_display_game"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings">
