--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
             android:name=".AddGameEnterDataActivity"
             android:label="@string/title_activity_add_game_enter_data"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustNothing" />
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".ShowPlayerStatsActivity"
             android:label="@string/title_activity_player_stats"/>
@@ -58,7 +58,7 @@
             android:name=".EditGameActivity"
             android:label="@string/title_activity_edit_game"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustNothing"/>
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings">
