--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     compile 'com.android.support:design:25.2.0'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.rarepebble:colorpicker:2.2.0'
+    compile 'com.google.zxing:core:3.2.1'
     testCompile 'junit:junit:4.12'
 }
