--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,6 +88,10 @@
             android:name=".TeamDivision2"
             android:label="@string/title_activity_team_division2"
             android:theme="@style/Theme.App.Base"></activity>
+        <activity
+            android:name=".ListViewRemovalAnimation"
+            android:label="@string/title_activity_team_division2"
+            android:theme="@style/Theme.App.Base"></activity>
     </application>
 
 </manifest>
