--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.rarepebble:colorpicker:2.2.0'
     compile 'com.google.zxing:core:3.2.1'
+    compile 'org.apache.commons:commons-lang3:3.4'
     testCompile 'junit:junit:4.12'
 }
