--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     compile 'com.rarepebble:colorpicker:2.2.0'
     compile 'com.google.zxing:core:3.2.1'
     compile 'org.apache.commons:commons-lang3:3.4'
+    compile 'me.dm7.barcodescanner:zxing:1.9.2'
     testCompile 'junit:junit:4.12'
 }
