--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="group2.schoolproject.a02soccer">
+          package="group2.schoolproject.a02soccer">
 
-    <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
         android:allowBackup="true"
@@ -16,14 +16,14 @@
         android:theme="@style/Theme.App.Base">
         <activity
             android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".StartActivity"
             android:label="Moskito&apos;s Soccer App">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <!--
@@ -34,45 +34,45 @@
         <activity
             android:name=".EditPlayerActivity"
             android:label="@string/title_activity_edit_player_admin"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".AddPlayerActivity"
             android:label="@string/title_activity_add_player"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".TeamDivisionActivity"
             android:label="@string/title_activity_team_management"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"/>
         <!-- android:theme="@style/AppTheme.NoActionBar"></activity> -->
         <activity
             android:name=".AddGameSelectPlayersActivity"
             android:label="@string/title_activity_add_game_select_players"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".AddGameEnterDataActivity"
             android:label="@string/title_activity_add_game_enter_data"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" />
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".ShowPlayerStatsActivity"
             android:label="@string/title_activity_player_stats"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".ShowGameActivity"
             android:label="@string/title_activity_display_game"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".EditGameActivity"
             android:label="@string/title_activity_edit_game"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" />
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="group2.schoolproject.a02soccer.MainActivity" />
+                android:value="group2.schoolproject.a02soccer.MainActivity"/>
         </activity>
         <activity
             android:name=".DebugSettingsActivity"
@@ -80,20 +80,20 @@
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="group2.schoolproject.a02soccer.LoginActivity" />
+                android:value="group2.schoolproject.a02soccer.LoginActivity"/>
         </activity>
         <activity
             android:name=".ScoreboardActivity"
             android:label="@string/title_activity_score_board"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".TeamDivision2"
             android:label="@string/title_activity_team_division2"
-            android:theme="@style/Theme.App.Base" />
+            android:theme="@style/Theme.App.Base"/>
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login"
-            android:theme="@style/Theme.App.Base" />
+            android:theme="@style/Theme.App.Base"/>
     </application>
 
 </manifest>
