--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.google.zxing:core:3.2.1'
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'me.dm7.barcodescanner:zxing:1.9.2'
+    compile 'com.journeyapps:zxing-android-embedded:3.4.0'
     compile 'com.android.support:support-v4:25.3.1'
     testCompile 'junit:junit:4.12'
 }
