Qr-code scanner gui geändert kleinere Anpassungen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="group2.schoolproject.a02soccer">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="group2.schoolproject.a02soccer">
 
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.CAMERA"/>
-
-
     <uses-feature android:name="android.hardware.camera" />
-
-    <uses-permission android:name="android.permission.CAMERA" />
-
 
     <application
         android:allowBackup="true"
@@ -34,7 +28,6 @@
             android:label="Moskito&apos;s Soccer App">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
@@ -50,7 +43,6 @@
             android:name=".TeamDivisionActivity"
             android:label="@string/title_activity_team_management"
             android:screenOrientation="portrait"/>
-        <!-- android:theme="@style/AppTheme.NoActionBar"></activity> -->
         <activity
             android:name=".AddGameSelectPlayersActivity"
             android:label="@string/title_activity_add_game_select_players"
@@ -99,10 +91,12 @@
             android:theme="@style/Theme.App.Base"/>
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login"
-            android:theme="@style/Theme.App.Base"/>
-        <activity android:name=".pkgBarcodeScanner.BarcodeCaptureActivity"
+            android:theme="@style/Theme.App.Base"
+            android:label="@string/title_activity_login" />
+        <activity
+            android:name=".BarcodeCaptureActivity"
+            android:windowSoftInputMode="adjustNothing"
+            android:theme="@style/AppTheme.NoActionBar"
             android:label="Read Barcode"/>
     </application>
-
 </manifest>
