--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,12 +93,12 @@
             android:name=".LoginActivity"
             android:label="@string/title_activity_login"
             android:theme="@style/Theme.App.Base"/>
-        <activity android:name=".PictureTestActivity">
-        </activity>
         <activity android:name=".SiteNoticeActivity">
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value="group2.schoolproject.a02soccer.MainActivity"/>
         </activity>
-            android:theme="@style/Theme.App.Base"
-            android:label="@string/title_activity_login" />
+
         <activity
             android:name=".QRScannerActivity"
             android:windowSoftInputMode="adjustNothing"
