--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera"/>
 
     <application
         android:allowBackup="true"
@@ -22,10 +22,12 @@
             android:value="barcode" />
         <activity
             android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".StartActivity"
-            android:label="Moskito&apos;s Soccer App">
+            android:label="Moskito&apos;s Soccer App"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -88,11 +90,13 @@
         <activity
             android:name=".TeamDivision2"
             android:label="@string/title_activity_team_division2"
-            android:theme="@style/Theme.App.Base"/>
+            android:theme="@style/Theme.App.Base"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login"
-            android:theme="@style/Theme.App.Base"/>
+            android:theme="@style/Theme.App.Base"
+            android:screenOrientation="portrait"/>
         <activity android:name=".SiteNoticeActivity">
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
@@ -103,6 +107,7 @@
             android:name=".QRScannerActivity"
             android:windowSoftInputMode="adjustNothing"
             android:theme="@style/AppTheme.NoActionBar"
-            android:label="Read Barcode"/>
+            android:label="@string/title_activity_qr_scanner"
+            android:screenOrientation="portrait"/>
     </application>
 </manifest>
