--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,7 +88,7 @@
             android:label="@string/title_activity_score_board"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".TeamDivision2"
+            android:name=".TeamDivisionActivity_swipe"
             android:label="@string/title_activity_team_division2"
             android:theme="@style/Theme.App.Base"
             android:screenOrientation="portrait"/>
